@@ -1,102 +1,59 @@
 package it.moneyverse.transaction.utils.mapper;
 
+import static it.moneyverse.transaction.utils.TransactionTestUtils.*;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
 
-import it.moneyverse.core.exceptions.ResourceNotFoundException;
 import it.moneyverse.test.utils.RandomUtils;
 import it.moneyverse.transaction.model.dto.TransactionDto;
 import it.moneyverse.transaction.model.dto.TransactionRequestDto;
+import it.moneyverse.transaction.model.dto.TransactionRequestItemDto;
 import it.moneyverse.transaction.model.dto.TransactionUpdateRequestDto;
 import it.moneyverse.transaction.model.entities.Tag;
 import it.moneyverse.transaction.model.entities.Transaction;
-import it.moneyverse.transaction.model.repositories.TagRepository;
 import java.util.*;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
-@ExtendWith(MockitoExtension.class)
 class TransactionMapperTest {
-
-  @Mock private TagRepository tagRepository;
 
   @Test
   void testToTransaction_NullTransactionRequest() {
-    assertNull(TransactionMapper.toTransaction(null, tagRepository));
+    assertNull(TransactionMapper.toTransaction(RandomUtils.randomUUID(), null));
   }
 
   @Test
   void testToTransaction_ValidTransactionRequest_EmptyTags() {
-    TransactionRequestDto request =
-        new TransactionRequestDto(
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomLocalDate(2024, 2025),
-            RandomUtils.randomString(15),
-            RandomUtils.randomBigDecimal(),
-            RandomUtils.randomString(3).toUpperCase(),
-            null);
+    UUID userId = RandomUtils.randomUUID();
+    TransactionRequestDto request = createTransactionRequest(userId);
+    TransactionRequestItemDto transactionRequestItemDto = request.transactions().getFirst();
 
-    Transaction result = TransactionMapper.toTransaction(request, tagRepository);
+    Transaction result = TransactionMapper.toTransaction(userId, transactionRequestItemDto);
 
     assertEquals(request.userId(), result.getUserId());
-    assertEquals(request.accountId(), result.getAccountId());
-    assertEquals(request.budgetId(), result.getBudgetId());
-    assertEquals(request.date(), result.getDate());
-    assertEquals(request.description(), result.getDescription());
-    assertEquals(request.currency(), result.getCurrency());
+    assertEquals(transactionRequestItemDto.accountId(), result.getAccountId());
+    assertEquals(transactionRequestItemDto.categoryId(), result.getBudgetId());
+    assertEquals(transactionRequestItemDto.date(), result.getDate());
+    assertEquals(transactionRequestItemDto.description(), result.getDescription());
+    assertEquals(transactionRequestItemDto.currency(), result.getCurrency());
     assertEquals(Collections.emptySet(), result.getTags());
   }
 
   @Test
-  void testToTransaction_ValidTransactionRequest_Tags(@Mock Tag tag) {
-    UUID tagId = RandomUtils.randomUUID();
-    TransactionRequestDto request =
-        new TransactionRequestDto(
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomLocalDate(2024, 2025),
-            RandomUtils.randomString(15),
-            RandomUtils.randomBigDecimal(),
-            RandomUtils.randomString(3).toUpperCase(),
-            Collections.singleton(tagId));
-    when(tagRepository.findById(tagId)).thenReturn(Optional.of(tag));
+  void testToTransaction_ValidTransactionRequest_Tags() {
+    UUID userId = RandomUtils.randomUUID();
+    Set<Tag> tags = Set.of(createTag(userId));
+    TransactionRequestDto request = createTransactionRequest(userId, tags);
+    TransactionRequestItemDto transactionRequestItemDto = request.transactions().getFirst();
 
-    Transaction result = TransactionMapper.toTransaction(request, tagRepository);
+    Transaction result = TransactionMapper.toTransaction(userId, transactionRequestItemDto, tags);
 
     assertEquals(request.userId(), result.getUserId());
-    assertEquals(request.accountId(), result.getAccountId());
-    assertEquals(request.budgetId(), result.getBudgetId());
-    assertEquals(request.date(), result.getDate());
-    assertEquals(request.description(), result.getDescription());
-    assertEquals(request.currency(), result.getCurrency());
-    assertEquals(Collections.singleton(tag), result.getTags());
-  }
-
-  @Test
-  void testToTransaction_ValidTransactionRequest_TagNotFound() {
-    UUID tagId = RandomUtils.randomUUID();
-    TransactionRequestDto request =
-        new TransactionRequestDto(
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomLocalDate(2024, 2025),
-            RandomUtils.randomString(15),
-            RandomUtils.randomBigDecimal(),
-            RandomUtils.randomString(3).toUpperCase(),
-            Collections.singleton(tagId));
-    when(tagRepository.findById(tagId)).thenReturn(Optional.empty());
-
-    assertThrows(
-        ResourceNotFoundException.class,
-        () -> TransactionMapper.toTransaction(request, tagRepository));
+    assertEquals(transactionRequestItemDto.accountId(), result.getAccountId());
+    assertEquals(transactionRequestItemDto.categoryId(), result.getBudgetId());
+    assertEquals(transactionRequestItemDto.date(), result.getDate());
+    assertEquals(transactionRequestItemDto.description(), result.getDescription());
+    assertEquals(transactionRequestItemDto.currency(), result.getCurrency());
+    assertEquals(tags, result.getTags());
   }
 
   @Test
@@ -106,7 +63,7 @@ class TransactionMapperTest {
 
   @Test
   void testToTransactionDto_ValidTransactionEntity() {
-    Transaction transaction = createTransaction();
+    Transaction transaction = createTransaction(RandomUtils.randomUUID());
 
     TransactionDto result = TransactionMapper.toTransactionDto(transaction);
 
@@ -131,7 +88,7 @@ class TransactionMapperTest {
     int entitiesCount = RandomUtils.randomInteger(0, 10);
     List<Transaction> transactions = new ArrayList<>(entitiesCount);
     for (int i = 0; i < entitiesCount; i++) {
-      transactions.add(createTransaction());
+      transactions.add(createTransaction(RandomUtils.randomUUID()));
     }
     List<TransactionDto> transactionDtos = TransactionMapper.toTransactionDto(transactions);
 
@@ -152,8 +109,10 @@ class TransactionMapperTest {
   }
 
   @Test
-  void testToTransaction_PartialUpdate(@Mock Tag tag) {
-    Transaction transaction = createTransaction();
+  void testToTransaction_PartialUpdate() {
+    UUID userId = RandomUtils.randomUUID();
+    Transaction transaction = createTransaction(userId);
+    Set<Tag> tags = createTags(userId);
     TransactionUpdateRequestDto request =
         new TransactionUpdateRequestDto(
             RandomUtils.randomUUID(),
@@ -162,58 +121,16 @@ class TransactionMapperTest {
             RandomUtils.randomString(15),
             RandomUtils.randomBigDecimal(),
             RandomUtils.randomString(3).toUpperCase(),
-            createTags().stream().map(Tag::getTagId).collect(Collectors.toSet()));
-    when(tagRepository.findById(any(UUID.class))).thenReturn(Optional.of(tag));
+            tags.stream().map(Tag::getTagId).collect(Collectors.toSet()));
 
-    Transaction result = TransactionMapper.partialUpdate(transaction, request, tagRepository);
+    Transaction result = TransactionMapper.partialUpdate(transaction, request, tags);
 
     assertEquals(request.accountId(), result.getAccountId());
     assertEquals(request.budgetId(), result.getBudgetId());
     assertEquals(request.date(), result.getDate());
     assertEquals(request.description(), result.getDescription());
     assertEquals(request.currency(), result.getCurrency());
-    assertEquals(1, result.getTags().size());
+    assertEquals(tags.size(), result.getTags().size());
   }
 
-  @Test
-  void testToTransaction_PartialUpdate_TagNotFound() {
-    Transaction transaction = createTransaction();
-    TransactionUpdateRequestDto request =
-        new TransactionUpdateRequestDto(
-            RandomUtils.randomUUID(),
-            RandomUtils.randomUUID(),
-            RandomUtils.randomLocalDate(2024, 2024),
-            RandomUtils.randomString(15),
-            RandomUtils.randomBigDecimal(),
-            RandomUtils.randomString(3).toUpperCase(),
-            createTags().stream().map(Tag::getTagId).collect(Collectors.toSet()));
-    when(tagRepository.findById(any(UUID.class))).thenReturn(Optional.empty());
-
-    assertThrows(
-        ResourceNotFoundException.class,
-        () -> TransactionMapper.partialUpdate(transaction, request, tagRepository));
-  }
-
-  private Transaction createTransaction() {
-    Transaction transaction = new Transaction();
-    transaction.setTransactionId(RandomUtils.randomUUID());
-    transaction.setUserId(RandomUtils.randomUUID());
-    transaction.setAccountId(RandomUtils.randomUUID());
-    transaction.setBudgetId(RandomUtils.randomUUID());
-    transaction.setDate(RandomUtils.randomLocalDate(2024, 2025));
-    transaction.setDescription(RandomUtils.randomString(15));
-    transaction.setAmount(RandomUtils.randomBigDecimal());
-    transaction.setCurrency(RandomUtils.randomString(3).toUpperCase());
-    transaction.setTags(createTags());
-    return transaction;
-  }
-
-  private Set<Tag> createTags() {
-    int tagsCount = RandomUtils.randomInteger(1, 3);
-    Set<Tag> tags = new HashSet<>();
-    for (int i = 0; i < tagsCount; i++) {
-      tags.add(TagMapperTest.createTag());
-    }
-    return tags;
-  }
 }
